package airdispatch;

// THIS IS THE SAMPLE PROTOBUF DOCUMENT DESCRIBING THE PROTOCOL.
// THIS IS SUBJECT TO CHANGE AT ANY TIME UP UNTIL RELEASE.
// WE ARE STILL WORKING ON THE PROTOCOL AND HOPE TO RELEASE A
// WORKING VERSION IN MAY.

// ALL MESSAGES BEGIN WITH THE BYTES 'AD' IN ASCII TO SPECIFY 'AIRDISPATCH'
// ALL MESSAGES ARE PREFIXED WITH 2 BYTES THAT SPECIFY THE MESSAGE LENGTH
// IN BIG-ENDIAN FORMAT.

message Mail {
	required string from_address = 1; // The Address of the Sending User
	required string encryption = 2; // The Encryption Algorithim of the Message
	required bytes data = 3; // The Encrypted Data
}

message MailData {
	repeated MailData.DataType payload = 1;

	message DataType {
		required string type_name = 1; // The Type of the Data being Sent
		required bytes payload = 2; // The Data
		optional string encryption = 3; // The Optional Additional/Seperate Encryption of this Data Segment
	}
}

message SignedMessage {
	required bytes payload = 1;
	optional bytes signing_key = 2;
	
	required Signature signature = 3;
	
	optional string message_type = 4;
	optional string signature_function = 5;
}

message Signature {
	required bytes r = 1;
	required bytes s = 2;
}

message Alert {
	required string from_address = 1;
	required string location = 2;
	optional string message_id = 4;
}

message RetrieveData {
	optional string message_id = 1;
	optional string to_address = 2;
	optional string filter_options = 3;
}

message AddressRegistration {
	required string address = 1;
	required bytes public_key = 2;
	required string location = 3;
	optional string username = 4;
}

message AddressRequest {
	required string address = 1;
	optional bool need_key = 2;
}

message AddressResponse {
	required string server_location = 1;
	optional bytes public_key = 2;
}
